--- a/softsite/templates/softsite/success.html
+++ b/softsite/templates/softsite/success.html
@@ -1,6 +1,6 @@
 <html>
 <head> </head>
 <body>
-<h1>Successfully Added</h1>
+<h1>Successfully Added {{ currentUser.first_name }}</h1>
 </body>
 </html>
